fixed overlapping issue with checkbox

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,6 +25,7 @@
     padding: 10px;
     min-width: 49%;
     max-width: 49%;
+    z-index: 900;
     overflow-y: scroll;
 }
 .hide-outline {
@@ -106,6 +107,7 @@ input[type="checkbox"] {
     cursor: pointer;
     margin-bottom: 2px;
     margin-left: 5px;
+    z-index: 800;
 }
 #title, #max-pts {
     display: inline-block;
